// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EmptyLibrary > renders empty state for folder 1`] = `
<div>
  <div
    class="flex h-full items-center justify-center p-12"
  >
    <div
      class="max-w-md w-full text-center space-y-8"
    >
      <div
        class="relative mx-auto w-32 h-32 flex items-center justify-center"
      >
        <div
          class="absolute inset-0 bg-primary/15 blur-[40px] rounded-full"
        />
        <div
          class="absolute inset-4 bg-surface-bg/50 rounded-full border border-main-border/10"
        />
        <div
          class="relative"
        >
          <svg
            class="text-indigo-500/40"
            fill="none"
            height="80"
            viewBox="0 0 80 80"
            width="80"
            xmlns="http://www.w3.org/2000/svg"
          >
            <div
              d="M12 28V20C12 17.79 13.79 16 16 16H28.5L32.5 22H64C66.21 22 68 23.79 68 26V28H12Z"
              fill="none"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2.5"
            />
            <div
              d="M12 28V58C12 60.21 13.79 62 16 62H64C66.21 62 68 60.21 68 58V28H12Z"
              fill="none"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2.5"
            />
            <div
              d="M34 42H56"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-width="2"
            />
            <div
              d="M30 48H52"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-width="2"
            />
          </svg>
        </div>
        <div
          class="absolute -bottom-4 left-0 right-0 h-[1px] bg-gradient-to-r from-transparent via-main-border to-transparent"
        />
      </div>
      <div
        class="space-y-3"
      >
        <div
          class="text-[12px] text-main-text "
        >
          Folder Empty
        </div>
        <div
          class="text-xs font-medium text-muted-text leading-relaxed max-w-[220px] mx-auto antialiased"
        >
          Drop files here or use the upload button above.
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EmptyLibrary > renders empty state for non-folder 1`] = `
<div>
  <div
    class="flex h-full items-center justify-center p-12"
  >
    <div
      class="max-w-md w-full text-center space-y-8"
    >
      <div
        class="relative mx-auto w-32 h-32 flex items-center justify-center"
      >
        <div
          class="absolute inset-0 bg-primary/15 blur-[40px] rounded-full"
        />
        <div
          class="absolute inset-4 bg-surface-bg/50 rounded-full border border-main-border/10"
        />
        <div
          class="relative"
        >
          <svg
            class="text-indigo-500/40"
            fill="none"
            height="80"
            viewBox="0 0 80 80"
            width="80"
            xmlns="http://www.w3.org/2000/svg"
          >
            <div
              fill="none"
              height="44"
              rx="4"
              stroke="currentColor"
              stroke-linejoin="round"
              stroke-width="2.5"
              width="52"
              x="14"
              y="18"
            />
            <div
              cx="40"
              cy="38"
              fill="none"
              r="8"
              stroke="currentColor"
              stroke-width="2.5"
            />
            <div
              d="M40 34V42"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-width="2.5"
            />
            <div
              d="M36 38H44"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-width="2.5"
            />
            <div
              d="M26 56L34 50L38 54L46 46L54 52L56 56"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.5"
            />
          </svg>
        </div>
        <div
          class="absolute -bottom-4 left-0 right-0 h-[1px] bg-gradient-to-r from-transparent via-main-border to-transparent"
        />
      </div>
      <div
        class="space-y-3"
      >
        <div
          class="text-[12px] text-main-text "
        >
          No Files Yet
        </div>
        <div
          class="text-xs font-medium text-muted-text leading-relaxed max-w-[220px] mx-auto antialiased"
        >
          Drag and drop files anywhere, or click upload to start building your library.
        </div>
      </div>
    </div>
  </div>
</div>
`;
